test/typecheck/fail/modify_assignment1.sail

val unit -> unit effect pure test
    
function unit test () =
{
  z := 9;
  z := 10
}